Adds csr project jupyter notebook

--- a/Corporate Sustainability BCG Matrix Creation.ipynb
+++ b/Corporate Sustainability BCG Matrix Creation.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install altair \n",
+    "pip install altair \n",
     "#you'll want to remove the first '#' in this block of code\n",
     "#the first time you run this"
    ]
