--- a/Corporate Sustainability BCG Matrix Creation.ipynb
+++ b/Corporate Sustainability BCG Matrix Creation.ipynb
@@ -223,18 +223,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: altair in /opt/anaconda3/lib/python3.8/site-packages (4.1.0)\n",
+      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.8/site-packages (from altair) (1.18.5)\n",
+      "Requirement already satisfied: pandas>=0.18 in /opt/anaconda3/lib/python3.8/site-packages (from altair) (1.0.5)\n",
+      "Requirement already satisfied: jinja2 in /opt/anaconda3/lib/python3.8/site-packages (from altair) (2.11.2)\n",
+      "Requirement already satisfied: jsonschema in /opt/anaconda3/lib/python3.8/site-packages (from altair) (3.2.0)\n",
+      "Requirement already satisfied: toolz in /opt/anaconda3/lib/python3.8/site-packages (from altair) (0.10.0)\n",
+      "Requirement already satisfied: entrypoints in /opt/anaconda3/lib/python3.8/site-packages (from altair) (0.3)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /opt/anaconda3/lib/python3.8/site-packages (from pandas>=0.18->altair) (2020.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /opt/anaconda3/lib/python3.8/site-packages (from pandas>=0.18->altair) (2.8.1)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /opt/anaconda3/lib/python3.8/site-packages (from jinja2->altair) (1.1.1)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /opt/anaconda3/lib/python3.8/site-packages (from jsonschema->altair) (19.3.0)\n",
+      "Requirement already satisfied: six>=1.11.0 in /opt/anaconda3/lib/python3.8/site-packages (from jsonschema->altair) (1.15.0)\n",
+      "Requirement already satisfied: setuptools in /opt/anaconda3/lib/python3.8/site-packages (from jsonschema->altair) (49.2.0.post20200714)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /opt/anaconda3/lib/python3.8/site-packages (from jsonschema->altair) (0.16.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "pip install altair \n",
+    "!pip install altair \n",
     "#you'll want to remove the first '#' in this block of code\n",
     "#the first time you run this"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,19 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-21f200527de04e87a060d5d3fe41b83e\"></div>\n",
+       "<div id=\"altair-viz-5722bd60ef3548d1b844b30c711a9019\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-21f200527de04e87a060d5d3fe41b83e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-21f200527de04e87a060d5d3fe41b83e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5722bd60ef3548d1b844b30c711a9019\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5722bd60ef3548d1b844b30c711a9019\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -306,7 +327,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,19 +351,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-58a270118e3d4eb9a677899f6e38a740\"></div>\n",
+       "<div id=\"altair-viz-2e7ae64258f449dfa9a4126cd06f37d4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-58a270118e3d4eb9a677899f6e38a740\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-58a270118e3d4eb9a677899f6e38a740\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2e7ae64258f449dfa9a4126cd06f37d4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2e7ae64258f449dfa9a4126cd06f37d4\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -391,7 +412,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,19 +437,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4fa4f9229e8946ed8d91cb9d75839422\"></div>\n",
+       "<div id=\"altair-viz-f05601d31c8c410d8c09a30a6457dd1d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4fa4f9229e8946ed8d91cb9d75839422\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4fa4f9229e8946ed8d91cb9d75839422\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f05601d31c8c410d8c09a30a6457dd1d\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f05601d31c8c410d8c09a30a6457dd1d\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -477,7 +498,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,19 +525,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e40d411bbeca40af907ca474901c202d\"></div>\n",
+       "<div id=\"altair-viz-1fd3a3225fd74b93af946cb1064206be\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e40d411bbeca40af907ca474901c202d\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e40d411bbeca40af907ca474901c202d\");\n",
+       "    if (outputDiv.id !== \"altair-viz-1fd3a3225fd74b93af946cb1064206be\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-1fd3a3225fd74b93af946cb1064206be\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -565,7 +586,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,19 +611,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a7e84bd6d6a043deb9923dcbdf8ee6bc\"></div>\n",
+       "<div id=\"altair-viz-80f210c2ff8c479bbeb812ae8eb05256\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-a7e84bd6d6a043deb9923dcbdf8ee6bc\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-a7e84bd6d6a043deb9923dcbdf8ee6bc\");\n",
+       "    if (outputDiv.id !== \"altair-viz-80f210c2ff8c479bbeb812ae8eb05256\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-80f210c2ff8c479bbeb812ae8eb05256\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -651,7 +672,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,19 +697,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-8c4db05181af4bfbac351fba0fe43106\"></div>\n",
+       "<div id=\"altair-viz-cba3b0bc21d7419ea8649b0dff2d06a7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8c4db05181af4bfbac351fba0fe43106\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8c4db05181af4bfbac351fba0fe43106\");\n",
+       "    if (outputDiv.id !== \"altair-viz-cba3b0bc21d7419ea8649b0dff2d06a7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-cba3b0bc21d7419ea8649b0dff2d06a7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -737,7 +758,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
